# Transcriptor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.md
.github/workflows/: ci.yml
app/: __init__.py  auth.py  config.py  logging.py  main.py  model_server.py  models.py
app/api/: routes_health.py  routes_jobs.py
app/backends/: base.py  factory.py  hosted.py  http_base.py  local.py  model_server.py
app/core/: chunking.py  pipeline.py  reassembly.py  scheduler.py
app/store/: base.py  memory.py  redis_store.py
app/worker/: worker.py
docs/: DECISIONS.md  DESIGN.md  IMPLEMENTATION_PLAN.md  INTERVIEW_NOTES.md  SUMMARY.md
tests/e2e/: test_transcribe_e2e.py
tests/unit/: test_auth.py  test_chunking.py  test_model_server_backend.py  test_pipeline.py  test_reassembly.py  test_redis_async.py
web/: app.js  index.html
